# uselesskey

./: .gitignore  .typos.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  CCodeRustuselesskeybdd_output.txt  GEMINI.md  README.md  SECURITY.md  _out.txt  accept_snaps.py  cargo-ver.txt  clippy.toml  deny.toml  jwt-out.txt  mutants.toml  output.txt  parse_results.py  read_output.py  run_all_tests.py  run_test.py  run_tests.ps1  run_tests_bg.py  rustfmt.toml  test_output.txt
canaries/adapter-rustls/: Cargo.published.toml  Cargo.toml
canaries/adapter-rustls/src/: lib.rs  main.rs
canaries/facade-minimal/: Cargo.published.toml  Cargo.toml
canaries/facade-minimal/src/: lib.rs  main.rs
crates/uselesskey-aws-lc-rs/: Cargo.toml  README.md  build.rs
crates/uselesskey-aws-lc-rs/src/: lib.rs
crates/uselesskey-aws-lc-rs/tests/: aws_lc_rs_comprehensive.rs  aws_lc_rs_prop.rs  snapshots_aws_lc_rs.rs  testutil.rs
crates/uselesskey-axum/: Cargo.toml  README.md
crates/uselesskey-axum/src/: lib.rs
crates/uselesskey-axum/tests/: axum_auth.rs  integration.rs
crates/uselesskey-bdd/: Cargo.toml
crates/uselesskey-bdd-steps/: Cargo.toml
crates/uselesskey-bdd-steps/src/: lib.rs
crates/uselesskey-bdd/features/: aws_lc_rs.feature  cache_behavior.feature  chain.feature  core-id.feature  core-negative.feature  cross_adapter.feature  cross_key.feature  determinism_edge_cases.feature  ecdsa.feature  ed25519.feature  edge_cases.feature  hmac.feature  jwk.feature  jwks.feature  jwt.feature  negative.feature  ring.feature  rsa.feature  rustcrypto.feature  rustls.feature  seed.feature  token.feature  x509.feature
crates/uselesskey-bdd/tests/: bdd.rs  feature_contract.rs
crates/uselesskey-bench/: Cargo.toml
crates/uselesskey-bench/src/: lib.rs  main.rs
crates/uselesskey-bench/tests/: baseline_schema.rs
crates/uselesskey-cli/: Cargo.toml  README.md
crates/uselesskey-cli/src/: export.rs  lib.rs  main.rs  manifest.rs
crates/uselesskey-cli/tests/: cli.rs  export_formats.rs  export_golden.rs  exporters.rs  golden_manifest.rs  integration.rs  tls_profile.rs
crates/uselesskey-core-artifact-id/: Cargo.toml  README.md
crates/uselesskey-core-artifact-id/src/: lib.rs
crates/uselesskey-core-cache/: Cargo.toml  README.md
crates/uselesskey-core-cache/src/: lib.rs
crates/uselesskey-core-cache/tests/: cache_perf.rs  cache_prop.rs  cache_tests.rs  comprehensive.rs  concurrency.rs  edge_cases.rs  integration.rs  integration_cache.rs  mutant_killers.rs  prop_cache.rs  snapshots_cache.rs
crates/uselesskey-core-error/: Cargo.toml  README.md
crates/uselesskey-core-error/src/: lib.rs
crates/uselesskey-core-factory/: Cargo.toml  README.md
crates/uselesskey-core-factory/src/: lib.rs
crates/uselesskey-core-factory/tests/: edge_cases.rs  error_handling.rs  error_paths.rs  factory_concurrency.rs  factory_edge_cases.rs  factory_integration.rs  factory_prop.rs  mutant_killers.rs  prop_tests.rs  snapshots_factory.rs
crates/uselesskey-core-hash/: Cargo.toml  README.md
crates/uselesskey-core-hash/src/: lib.rs
crates/uselesskey-core-hash/tests/: edge_cases.rs  hash_integration.rs  hash_prop.rs  hash_tests.rs  mutant_killers.rs  prop_hash.rs  snapshots_hash.rs  trait_impls.rs
crates/uselesskey-core-id/: Cargo.toml  README.md
crates/uselesskey-core-id/src/: lib.rs
crates/uselesskey-core-id/tests/: edge_cases.rs  id_prop.rs  id_tests.rs  mutant_killers.rs  prop_id.rs  seed_integration.rs  snapshots_id.rs  trait_impls.rs
crates/uselesskey-core-jwk/: Cargo.toml  README.md
crates/uselesskey-core-jwk-builder/: Cargo.toml  README.md
crates/uselesskey-core-jwk-builder/src/: lib.rs
crates/uselesskey-core-jwk-builder/tests/: comprehensive.rs  jwk_prop.rs  jwks_builder_integration.rs  mutant_killers.rs  serde_roundtrip.rs  snapshots_jwk_builder.rs
crates/uselesskey-core-jwk-shape/: Cargo.toml  README.md
crates/uselesskey-core-jwk-shape/src/: lib.rs
crates/uselesskey-core-jwk-types/: Cargo.toml  README.md
crates/uselesskey-core-jwks-order/: Cargo.toml  README.md
crates/uselesskey-core-jwt-shape/: Cargo.toml  README.md
crates/uselesskey-core-keypair/: Cargo.toml  README.md
crates/uselesskey-core-keypair-material/: Cargo.toml  README.md
crates/uselesskey-core-kid/: Cargo.toml  README.md
crates/uselesskey-core-negative/: Cargo.toml  README.md
crates/uselesskey-core-negative-der/: Cargo.toml  README.md
crates/uselesskey-core-negative-pem/: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: core_cache.rs  core_factory_cache.rs  core_hash.rs  core_id.rs  core_keypair_material.rs  core_kid.rs  core_negative_pem.rs  core_token_shape.rs  core_x509_negative.rs  ed25519_key_parse.rs  ed25519_pkcs8_pem_parse.rs  factory_concurrent_access.rs  fuzz_factory_concurrent.rs  fuzz_factory_stress.rs  fuzz_jwk_serialization.rs  fuzz_kid_generation.rs  fuzz_label_edge_cases.rs  fuzz_negative_pem.rs  fuzz_seed_edge_cases.rs  fuzz_token_shape.rs  fuzz_x509_spec.rs  jwk_order.rs  jwk_serde.rs  jwk_shape.rs  keypair_material.rs  negative_pem_roundtrip.rs  pgp_armored_parse.rs  seed_derivation.rs  token_shape.rs  x509_negative.rs  x509_spec.rs
tests/: Cargo.toml  api_surface.rs  builder_patterns.rs  concurrency.rs  cross_adapter.rs  crypto_backend_integration.rs  determinism_regression.rs  e2e_workflows.rs  governance.rs  jwt_integration.rs  key_rotation.rs  msrv_check.rs  security_invariants.rs  testutil.rs  tls_integration.rs
tests/snapshots/: api_surface__api_shape_snapshots__core_types_shape.snap  determinism_regression__x509_chain_fingerprints.snap  determinism_regression__x509_self_signed_fingerprints.snap  determinism_regression__x509_self_signed_metadata.snap
xtask/: Cargo.toml
xtask/src/: adoption_regression.rs  audit_surface.rs  bundle_proof.rs  claim_proof.rs  claim_report.rs  contract_packs.rs  corpus.rs  docs_sync.rs  economics.rs  external_adoption_smoke.rs  lint_policy.rs  main.rs  perf.rs  plan.rs  policy.rs  pr_bundles.rs  public_surface.rs  receipt.rs  spec_check.rs  test_efficiency.rs  user_path_smoke.rs  verification_pack.rs
(+1207 files in other folders)
