[workspace]
resolver = "2"
members = [
  "crates/uselesskey-test-grid",
  "crates/uselesskey-feature-grid",
  "crates/uselesskey",
  "crates/uselesskey-core",
  "crates/uselesskey-core-base62",
  "crates/uselesskey-core-factory",
  "crates/uselesskey-core-cache",
  "crates/uselesskey-core-hash",
  "crates/uselesskey-core-id",
  "crates/uselesskey-core-seed",
  "crates/uselesskey-core-kid",
  "crates/uselesskey-core-keypair",
  "crates/uselesskey-core-keypair-material",
  "crates/uselesskey-core-negative",
  "crates/uselesskey-core-negative-der",
  "crates/uselesskey-core-negative-pem",
  "crates/uselesskey-core-sink",
  "crates/uselesskey-core-token",
  "crates/uselesskey-core-token-shape",
  "crates/uselesskey-core-jwk-builder",
  "crates/uselesskey-core-jwks-order",
  "crates/uselesskey-core-jwk",
  "crates/uselesskey-core-hmac-spec",
  "crates/uselesskey-core-jwk-shape",
  "crates/uselesskey-core-x509-derive",
  "crates/uselesskey-core-x509-chain-negative",
  "crates/uselesskey-core-x509-negative",
  "crates/uselesskey-core-x509-spec",
  "crates/uselesskey-core-x509",
  "crates/uselesskey-core-rustls-pki",
  "crates/uselesskey-jwk",
  "crates/uselesskey-rsa",
  "crates/uselesskey-ecdsa",
  "crates/uselesskey-ed25519",
  "crates/uselesskey-hmac",
  "crates/uselesskey-token",
  "crates/uselesskey-token-spec",
  "crates/uselesskey-pgp",
  "crates/uselesskey-x509",
  "crates/uselesskey-jsonwebtoken",
  "crates/uselesskey-openssl",
  "crates/uselesskey-native-tls",
  "crates/uselesskey-webpki",
  "crates/uselesskey-rustls",
  "crates/uselesskey-tonic",
  "crates/uselesskey-ring",
  "crates/uselesskey-rustcrypto",
  "crates/uselesskey-aws-lc-rs",
  "crates/uselesskey-jose-openid",
  "crates/uselesskey-pgp-native",
  "crates/uselesskey-interop-tests",
  "crates/uselesskey-bdd",
  "crates/uselesskey-bdd-steps",
  "tests",
  "xtask",
]
exclude = ["fuzz"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.92"
repository = "https://github.com/EffortlessMetrics/uselesskey"
homepage = "https://github.com/EffortlessMetrics/uselesskey"
categories = ["development-tools::testing", "cryptography"]
authors = ["Effortless Metrics <opensource@effortlessmetrics.com>"]

[workspace.dependencies]
# error handling
thiserror = "2.0.18"

uselesskey-test-grid = { path = "crates/uselesskey-test-grid", version = "0.5.1" }
uselesskey-feature-grid = { path = "crates/uselesskey-feature-grid", version = "0.5.1" }
uselesskey-core-base62 = { path = "crates/uselesskey-core-base62", version = "0.5.1" }
uselesskey-core-cache = { path = "crates/uselesskey-core-cache", version = "0.5.1", default-features = false }
uselesskey-core-factory = { path = "crates/uselesskey-core-factory", version = "0.5.1" }
uselesskey-core-jwks-order = { path = "crates/uselesskey-core-jwks-order", version = "0.5.1" }
uselesskey-core-hash = { path = "crates/uselesskey-core-hash", version = "0.5.1", default-features = false }
uselesskey-core-token-shape = { path = "crates/uselesskey-core-token-shape", version = "0.5.1" }
uselesskey-core-id = { path = "crates/uselesskey-core-id", version = "0.5.1", default-features = false }
uselesskey-core-seed = { path = "crates/uselesskey-core-seed", version = "0.5.1", default-features = false }
uselesskey-core-kid = { path = "crates/uselesskey-core-kid", version = "0.5.1" }
uselesskey-core-keypair = { path = "crates/uselesskey-core-keypair", version = "0.5.1" }
uselesskey-core-keypair-material = { path = "crates/uselesskey-core-keypair-material", version = "0.5.1" }
uselesskey-core-negative = { path = "crates/uselesskey-core-negative", version = "0.5.1", default-features = false }
uselesskey-core-negative-der = { path = "crates/uselesskey-core-negative-der", version = "0.5.1", default-features = false }
uselesskey-core-negative-pem = { path = "crates/uselesskey-core-negative-pem", version = "0.5.1", default-features = false }
uselesskey-core-token = { path = "crates/uselesskey-core-token", version = "0.5.1" }
uselesskey-token-spec = { path = "crates/uselesskey-token-spec", version = "0.5.1" }
uselesskey-core-jwk-builder = { path = "crates/uselesskey-core-jwk-builder", version = "0.5.1" }
uselesskey-core-jwk = { path = "crates/uselesskey-core-jwk", version = "0.5.1" }
uselesskey-core-hmac-spec = { path = "crates/uselesskey-core-hmac-spec", version = "0.5.1" }
uselesskey-core-jwk-shape = { path = "crates/uselesskey-core-jwk-shape", version = "0.5.1" }
uselesskey-core-x509-derive = { path = "crates/uselesskey-core-x509-derive", version = "0.5.1" }
uselesskey-core-x509-chain-negative = { path = "crates/uselesskey-core-x509-chain-negative", version = "0.5.1" }
uselesskey-core-x509-negative = { path = "crates/uselesskey-core-x509-negative", version = "0.5.1" }
uselesskey-core-x509-spec = { path = "crates/uselesskey-core-x509-spec", version = "0.5.1" }
uselesskey-core-x509 = { path = "crates/uselesskey-core-x509", version = "0.5.1" }

# determinism / hashing
blake3 = "1.8.3"

# concurrency-friendly cache
dashmap = "6.1.0"

# RNG — workspace-wide line (all crates except rsa/pgp/x509 blocked islands)
rand10 = { package = "rand", version = "0.10.0", default-features = false }
rand_core10 = { package = "rand_core", version = "0.10.0", default-features = false }
rand_chacha10 = { package = "rand_chacha", version = "0.10.0", default-features = false }

# sinks
tempfile = "3.27.0"
uselesskey-core-sink = { path = "crates/uselesskey-core-sink", version = "0.5.1" }

# testing
proptest = "1.11.0"
rstest = "0.26.1"
insta = { version = "1.47.0", features = ["yaml", "redactions"] }
criterion = { version = "0.8.2", default-features = false, features = ["html_reports", "cargo_bench_support"] }
trybuild = "1.0.116"

# CLI helpers (xtask)
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }

# BDD
cucumber = { version = "0.22.1", features = ["macros"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

# RSA internal path uses rsa 0.10.x.
# Deterministic V1 RSA fixture bytes are preserved via a local compatibility bridge
# inside uselesskey-rsa.
# Legacy rsa 0.9 / rand_core 0.6 remains as an explicit upstream island under
# adapters such as jsonwebtoken and pgp.
rsa = { version = "0.10.0-rc.17", features = ["sha2"] }

# Ed25519
ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "pem", "rand_core"] }
pkcs8 = { version = "0.10.2", features = ["pem"] }

# optional JWK helpers
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"

# JWT
jsonwebtoken = { version = "10.3.0", features = ["use_pem", "rust_crypto"] }

# TLS
rustls = { version = "0.23.37", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pki-types = "1.14.0"

# Crypto backends
aws-lc-rs = { version = "1.16.2", default-features = false, features = ["alloc", "non-fips"] }
ring = { version = "0.17.14", default-features = false, features = ["std"] }

[profile.dev]
# RSA keygen can be slow in debug; opt-level 2 keeps BDD/RSA tests from looking hung.
opt-level = 2

[profile.test]
opt-level = 2

