[workspace]
resolver = "2"
members = [
  "crates/uselesskey-test-grid",
  "crates/uselesskey-feature-grid",
  "crates/uselesskey",
  "crates/uselesskey-core",
  "crates/uselesskey-core-base62",
  "crates/uselesskey-core-factory",
  "crates/uselesskey-core-cache",
  "crates/uselesskey-core-hash",
  "crates/uselesskey-core-id",
  "crates/uselesskey-core-seed",
  "crates/uselesskey-core-kid",
  "crates/uselesskey-core-keypair",
  "crates/uselesskey-core-keypair-material",
  "crates/uselesskey-core-negative",
  "crates/uselesskey-core-negative-der",
  "crates/uselesskey-core-negative-pem",
  "crates/uselesskey-core-sink",
  "crates/uselesskey-core-token",
  "crates/uselesskey-core-token-shape",
  "crates/uselesskey-core-jwk-builder",
  "crates/uselesskey-core-jwks-order",
  "crates/uselesskey-core-jwk",
  "crates/uselesskey-core-hmac-spec",
  "crates/uselesskey-core-jwk-shape",
  "crates/uselesskey-core-x509-derive",
  "crates/uselesskey-core-x509-chain-negative",
  "crates/uselesskey-core-x509-negative",
  "crates/uselesskey-core-x509-spec",
  "crates/uselesskey-core-x509",
  "crates/uselesskey-core-rustls-pki",
  "crates/uselesskey-jwk",
  "crates/uselesskey-entropy",
  "crates/uselesskey-rsa",
  "crates/uselesskey-ecdsa",
  "crates/uselesskey-ed25519",
  "crates/uselesskey-hmac",
  "crates/uselesskey-token",
  "crates/uselesskey-ssh",
  "crates/uselesskey-webhook",
  "crates/uselesskey-token-spec",
  "crates/uselesskey-pgp",
  "crates/uselesskey-x509",
  "crates/uselesskey-jsonwebtoken",
  "crates/uselesskey-axum",
  "crates/uselesskey-rustls",
  "crates/uselesskey-tonic",
  "crates/uselesskey-ring",
  "crates/uselesskey-rustcrypto",
  "crates/uselesskey-aws-lc-rs",
  "crates/uselesskey-jose-openid",
  "crates/uselesskey-test-server",
  "crates/uselesskey-pkcs11-mock",
  "crates/uselesskey-webauthn",
  "crates/uselesskey-pgp-native",
  "crates/uselesskey-interop-tests",
  "crates/uselesskey-bdd",
  "crates/uselesskey-bdd-steps",
  "crates/uselesskey-cli",
  "crates/materialize-shape-buildrs-example",
  "crates/materialize-buildrs-example",
  "tests",
  "xtask",
  "crates/uselesskey-bench",
]
exclude = ["fuzz"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.92"
repository = "https://github.com/EffortlessMetrics/uselesskey"
homepage = "https://github.com/EffortlessMetrics/uselesskey"
categories = ["development-tools::testing", "cryptography"]
authors = ["Effortless Metrics <opensource@effortlessmetrics.com>"]


[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
unexpected_cfgs = "warn"
const_item_interior_mutations = "deny"
function_casts_as_integer = "deny"

[workspace.lints.clippy]
# Panic-free production and tests
# These are staged at the workspace root. Member inheritance is ratcheted by
# `cargo xtask check-lint-policy` once the tracked debt has been burned down.
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
panic = "deny"
unreachable = "deny"
unwrap_used = "deny"
expect_used = "deny"
get_unwrap = "deny"
unwrap_in_result = "deny"
panic_in_result_fn = "deny"
string_slice = "deny"
indexing_slicing = "deny"
out_of_bounds_indexing = "deny"
unconditional_recursion = "deny"
unchecked_time_subtraction = "deny"

# AST / parser / UTF-8 / slice safety
char_indices_as_byte_indices = "deny"
sliced_string_as_bytes = "deny"
index_refutable_slice = "deny"

# Silent failure
let_underscore_future = "deny"
let_underscore_must_use = "deny"
let_underscore_lock = "deny"
unused_result_ok = "deny"
map_err_ignore = "deny"
assertions_on_result_states = "deny"
lines_filter_map_ok = "deny"

# Async / concurrency
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
await_holding_invalid_type = "deny"
future_not_send = "warn"
large_futures = "warn"
arc_with_non_send_sync = "deny"
rc_mutex = "deny"
mut_mutex_lock = "deny"
readonly_write_lock = "deny"

# Unsafe / memory
mem_forget = "deny"
forget_non_drop = "deny"
drop_non_drop = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
repr_packed_without_abi = "deny"

# Numeric correctness
float_cmp = "deny"
float_cmp_const = "deny"
float_equality_without_abs = "deny"
lossy_float_literal = "deny"
cast_sign_loss = "deny"
cast_possible_wrap = "warn"
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
invalid_upcast_comparisons = "deny"
cast_abs_to_unsigned = "deny"
cast_enum_truncation = "deny"
cast_nan_to_int = "deny"
manual_midpoint = "warn"
manual_is_multiple_of = "warn"
manual_div_ceil = "warn"
arithmetic_side_effects = "warn"

# File/process/path footguns
suspicious_open_options = "deny"
nonsensical_open_options = "deny"
ineffective_open_options = "deny"
path_buf_push_overwrite = "deny"
join_absolute_paths = "deny"
read_line_without_trim = "warn"
exit = "deny"

# API / trait correctness
iter_not_returning_iterator = "deny"
expl_impl_clone_on_copy = "deny"
infallible_try_from = "deny"
fallible_impl_from = "deny"
error_impl_error = "deny"
result_unit_err = "warn"
result_large_err = "warn"

# Good taste that pays rent
format_in_format_args = "deny"
to_string_in_format_args = "deny"
unused_format_specs = "deny"
unnecessary_debug_formatting = "warn"
uninlined_format_args = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_strip = "warn"
manual_split_once = "warn"
manual_is_variant_and = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
match_result_ok = "deny"
cloned_instead_of_copied = "warn"
iter_cloned_collect = "warn"
iter_overeager_cloned = "warn"
needless_collect = "warn"
redundant_closure = "warn"
redundant_closure_for_method_calls = "warn"
missing_panics_doc = "deny"
missing_errors_doc = "warn"

# Suppression governance
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
blanket_clippy_restriction_lints = "deny"
ignore_without_reason = "deny"
should_panic_without_expect = "deny"

[workspace.dependencies]
# error handling
thiserror = "2.0.18"

uselesskey-test-grid = { path = "crates/uselesskey-test-grid", version = "0.6.0" }
uselesskey-feature-grid = { path = "crates/uselesskey-feature-grid", version = "0.6.0" }
uselesskey = { path = "crates/uselesskey", version = "0.6.0", default-features = false }
uselesskey-cli = { path = "crates/uselesskey-cli", version = "0.6.0" }
uselesskey-entropy = { path = "crates/uselesskey-entropy", version = "0.6.0" }
uselesskey-core = { path = "crates/uselesskey-core", version = "0.6.0" }
uselesskey-rsa = { path = "crates/uselesskey-rsa", version = "0.6.0" }
uselesskey-ecdsa = { path = "crates/uselesskey-ecdsa", version = "0.6.0" }
uselesskey-ed25519 = { path = "crates/uselesskey-ed25519", version = "0.6.0" }
uselesskey-hmac = { path = "crates/uselesskey-hmac", version = "0.6.0" }
uselesskey-token = { path = "crates/uselesskey-token", version = "0.6.0" }
uselesskey-x509 = { path = "crates/uselesskey-x509", version = "0.6.0" }
uselesskey-core-base62 = { path = "crates/uselesskey-core-base62", version = "0.6.0" }
uselesskey-core-cache = { path = "crates/uselesskey-core-cache", version = "0.6.0", default-features = false }
uselesskey-core-factory = { path = "crates/uselesskey-core-factory", version = "0.6.0" }
uselesskey-core-jwks-order = { path = "crates/uselesskey-core-jwks-order", version = "0.6.0" }
uselesskey-core-hash = { path = "crates/uselesskey-core-hash", version = "0.6.0", default-features = false }
uselesskey-core-token-shape = { path = "crates/uselesskey-core-token-shape", version = "0.6.0" }
uselesskey-core-id = { path = "crates/uselesskey-core-id", version = "0.6.0", default-features = false }
uselesskey-core-seed = { path = "crates/uselesskey-core-seed", version = "0.6.0", default-features = false }
uselesskey-core-kid = { path = "crates/uselesskey-core-kid", version = "0.6.0" }
uselesskey-core-keypair = { path = "crates/uselesskey-core-keypair", version = "0.6.0" }
uselesskey-core-keypair-material = { path = "crates/uselesskey-core-keypair-material", version = "0.6.0" }
uselesskey-core-negative = { path = "crates/uselesskey-core-negative", version = "0.6.0", default-features = false }
uselesskey-core-negative-der = { path = "crates/uselesskey-core-negative-der", version = "0.6.0", default-features = false }
uselesskey-core-negative-pem = { path = "crates/uselesskey-core-negative-pem", version = "0.6.0", default-features = false }
uselesskey-core-token = { path = "crates/uselesskey-core-token", version = "0.6.0" }
uselesskey-webhook = { path = "crates/uselesskey-webhook", version = "0.6.0" }
uselesskey-token-spec = { path = "crates/uselesskey-token-spec", version = "0.6.0" }
uselesskey-ssh = { path = "crates/uselesskey-ssh", version = "0.6.0" }
uselesskey-core-jwk-builder = { path = "crates/uselesskey-core-jwk-builder", version = "0.6.0" }
uselesskey-core-jwk = { path = "crates/uselesskey-core-jwk", version = "0.6.0" }
uselesskey-core-hmac-spec = { path = "crates/uselesskey-core-hmac-spec", version = "0.6.0" }
uselesskey-core-jwk-shape = { path = "crates/uselesskey-core-jwk-shape", version = "0.6.0" }
uselesskey-core-x509-derive = { path = "crates/uselesskey-core-x509-derive", version = "0.6.0" }
uselesskey-core-x509-chain-negative = { path = "crates/uselesskey-core-x509-chain-negative", version = "0.6.0" }
uselesskey-core-x509-negative = { path = "crates/uselesskey-core-x509-negative", version = "0.6.0" }
uselesskey-core-x509-spec = { path = "crates/uselesskey-core-x509-spec", version = "0.6.0" }
uselesskey-core-x509 = { path = "crates/uselesskey-core-x509", version = "0.6.0" }

# determinism / hashing
blake3 = "1.8.4"

# concurrency-friendly cache
dashmap = "6.1.0"

# RNG — workspace-wide line (all crates except rsa/pgp/x509 blocked islands)
rand10 = { package = "rand", version = "0.10.1", default-features = false }
rand_core10 = { package = "rand_core", version = "0.10.1", default-features = false }
rand_chacha10 = { package = "rand_chacha", version = "0.10.0", default-features = false }

# sinks
tempfile = "3.27.0"
uselesskey-core-sink = { path = "crates/uselesskey-core-sink", version = "0.6.0" }

# testing
proptest = "1.11.0"
rstest = "0.26.1"
insta = { version = "1.47.2", features = ["yaml", "redactions"] }
criterion = { version = "0.8.2", default-features = false, features = ["html_reports", "cargo_bench_support"] }
trybuild = "1.0.116"

# CLI helpers (xtask)
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }

# BDD
cucumber = { version = "0.22.1", features = ["macros"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

# RSA internal path uses rsa 0.10.x.
# Deterministic V1 RSA fixture bytes are preserved via a local compatibility bridge
# inside uselesskey-rsa.
# Legacy rsa 0.9 / rand_core 0.6 remains as an explicit upstream island under
# adapters such as jsonwebtoken and pgp.
rsa = { version = "0.10.0-rc.17", features = ["sha2"] }

# Ed25519
ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "pem", "rand_core"] }
pkcs8 = { version = "0.10.2", features = ["pem"] }

# optional JWK helpers
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
toml = "1"
ciborium = "0.2.2"
sha2 = "0.11.0"

# JWT
jsonwebtoken = { version = "10.3.0", features = ["use_pem", "rust_crypto"] }

# TLS
rustls = { version = "0.23.40", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pki-types = "1.14.0"

# Crypto backends
aws-lc-rs = { version = "1.16.3", default-features = false, features = ["alloc", "non-fips"] }
ring = { version = "0.17.14", default-features = false, features = ["std"] }

[profile.dev]
# RSA keygen can be slow in debug; opt-level 2 keeps BDD/RSA tests from looking hung.
opt-level = 2

[profile.test]
opt-level = 2
