[package]
name = "uselesskey-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rand_core = "0.6.4"
rand_chacha = "0.3.1"
blake3 = "1.8.3"

# fuzz targets
uselesskey = { path = "../crates/uselesskey", features = ["ecdsa", "ed25519", "token"] }
uselesskey-jwk = { path = "../crates/uselesskey-jwk" }
uselesskey-core-jwks-order = { path = "../crates/uselesskey-core-jwks-order" }
uselesskey-core-keypair-material = { path = "../crates/uselesskey-core-keypair-material" }
uselesskey-core-factory = { path = "../crates/uselesskey-core-factory" }
uselesskey-core-hash = { path = "../crates/uselesskey-core-hash" }
uselesskey-core-negative-pem = { path = "../crates/uselesskey-core-negative-pem" }
uselesskey-core-x509-negative = { path = "../crates/uselesskey-core-x509-negative" }
uselesskey-core-x509-spec = { path = "../crates/uselesskey-core-x509-spec" }
uselesskey-core-token-shape = { path = "../crates/uselesskey-core-token-shape" }
uselesskey-core-jwk-shape = { path = "../crates/uselesskey-core-jwk-shape" }
uselesskey-core-kid = { path = "../crates/uselesskey-core-kid" }
uselesskey-core-cache = { path = "../crates/uselesskey-core-cache" }
uselesskey-core-id = { path = "../crates/uselesskey-core-id" }
rsa = { version = "0.9", features = ["pem"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
ed25519-dalek = { version = "2.2", features = ["pkcs8", "pem"] }
pkcs8 = { version = "0.10", features = ["pem"] }
serde_json = "1"

[[bin]]
name = "pem_corrupt"
path = "fuzz_targets/pem_corrupt.rs"
test = false
doc = false

[[bin]]
name = "core_negative_pem"
path = "fuzz_targets/core_negative_pem.rs"
test = false
doc = false

[[bin]]
name = "der_ops"
path = "fuzz_targets/der_ops.rs"
test = false
doc = false

[[bin]]
name = "rsa_pkcs8_pem_parse"
path = "fuzz_targets/rsa_pkcs8_pem_parse.rs"
test = false
doc = false

[[bin]]
name = "ecdsa_pkcs8_pem_parse"
path = "fuzz_targets/ecdsa_pkcs8_pem_parse.rs"
test = false
doc = false

[[bin]]
name = "token_format"
path = "fuzz_targets/token_format.rs"
test = false
doc = false

[[bin]]
name = "seed_parse"
path = "fuzz_targets/seed_parse.rs"
test = false
doc = false

[[bin]]
name = "core_keypair_material"
path = "fuzz_targets/core_keypair_material.rs"
test = false
doc = false

[[bin]]
name = "core_factory_cache"
path = "fuzz_targets/core_factory_cache.rs"
test = false
doc = false

[[bin]]
name = "core_hash"
path = "fuzz_targets/core_hash.rs"
test = false
doc = false

[[bin]]
name = "core_x509_negative"
path = "fuzz_targets/core_x509_negative.rs"
test = false
doc = false

[[bin]]
name = "core_token_shape"
path = "fuzz_targets/core_token_shape.rs"
test = false
doc = false

[[bin]]
name = "jwk_builder"
path = "fuzz_targets/jwk_builder.rs"
test = false
doc = false

[[bin]]
name = "jwk_order"
path = "fuzz_targets/jwks_order.rs"
test = false
doc = false

[[bin]]
name = "jwk_shape"
path = "fuzz_targets/jwk_shape.rs"
test = false
doc = false

[[bin]]
name = "core_kid"
path = "fuzz_targets/core_kid.rs"
test = false
doc = false

[[bin]]
name = "core_cache"
path = "fuzz_targets/core_cache.rs"
test = false
doc = false

[[bin]]
name = "x509_spec"
path = "fuzz_targets/x509_spec.rs"
test = false
doc = false

[[bin]]
name = "ed25519_key_parse"
path = "fuzz_targets/ed25519_key_parse.rs"
test = false
doc = false
