[package]
name = "uselesskey-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rand_core = "0.6.4"
rand_chacha = "0.3.1"
blake3 = "1.8.3"

# fuzz targets
uselesskey = { path = "../crates/uselesskey", features = ["ecdsa", "token"] }
uselesskey-jwk = { path = "../crates/uselesskey-jwk" }
uselesskey-core-jwks-order = { path = "../crates/uselesskey-core-jwks-order" }
uselesskey-core-keypair-material = { path = "../crates/uselesskey-core-keypair-material" }
uselesskey-core-factory = { path = "../crates/uselesskey-core-factory" }
uselesskey-core-hash = { path = "../crates/uselesskey-core-hash" }
uselesskey-core-negative-pem = { path = "../crates/uselesskey-core-negative-pem" }
uselesskey-core-x509-negative = { path = "../crates/uselesskey-core-x509-negative" }
uselesskey-core-x509-spec = { path = "../crates/uselesskey-core-x509-spec" }
uselesskey-core-token-shape = { path = "../crates/uselesskey-core-token-shape" }
uselesskey-core-jwk-shape = { path = "../crates/uselesskey-core-jwk-shape" }
rsa = { version = "0.9", features = ["pem"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
serde_json = "1"

[[bin]]
name = "pem_corrupt"
path = "fuzz_targets/pem_corrupt.rs"
test = false
doc = false

[[bin]]
name = "core_negative_pem"
path = "fuzz_targets/core_negative_pem.rs"
test = false
doc = false

[[bin]]
name = "der_ops"
path = "fuzz_targets/der_ops.rs"
test = false
doc = false

[[bin]]
name = "rsa_pkcs8_pem_parse"
path = "fuzz_targets/rsa_pkcs8_pem_parse.rs"
test = false
doc = false

[[bin]]
name = "ecdsa_pkcs8_pem_parse"
path = "fuzz_targets/ecdsa_pkcs8_pem_parse.rs"
test = false
doc = false

[[bin]]
name = "token_format"
path = "fuzz_targets/token_format.rs"
test = false
doc = false

[[bin]]
name = "seed_parse"
path = "fuzz_targets/seed_parse.rs"
test = false
doc = false

[[bin]]
name = "core_keypair_material"
path = "fuzz_targets/core_keypair_material.rs"
test = false
doc = false

[[bin]]
name = "core_factory_cache"
path = "fuzz_targets/core_factory_cache.rs"
test = false
doc = false

[[bin]]
name = "core_hash"
path = "fuzz_targets/core_hash.rs"
test = false
doc = false

[[bin]]
name = "core_x509_negative"
path = "fuzz_targets/core_x509_negative.rs"
test = false
doc = false

[[bin]]
name = "core_token_shape"
path = "fuzz_targets/core_token_shape.rs"
test = false
doc = false

[[bin]]
name = "jwk_builder"
path = "fuzz_targets/jwk_builder.rs"
test = false
doc = false

[[bin]]
name = "jwks_order"
path = "fuzz_targets/jwks_order.rs"
test = false
doc = false

[[bin]]
name = "jwk_shape"
path = "fuzz_targets/jwk_shape.rs"
test = false
doc = false

[[bin]]
name = "negative_pem_roundtrip"
path = "fuzz_targets/negative_pem_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "jwk_serde"
path = "fuzz_targets/jwk_serde.rs"
test = false
doc = false

[[bin]]
name = "x509_negative"
path = "fuzz_targets/x509_negative.rs"
test = false
doc = false
