[package]
name = "uselesskey-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
rand_core = "0.6.4"
rand_chacha = "0.3.1"
blake3 = "1.8.3"

# fuzz targets
uselesskey = { path = "../crates/uselesskey", features = ["ecdsa", "ed25519", "hmac", "token", "x509"] }
uselesskey-jwk = { path = "../crates/uselesskey-jwk" }
uselesskey-core-jwks-order = { path = "../crates/uselesskey-core-jwks-order" }
uselesskey-core-keypair-material = { path = "../crates/uselesskey-core-keypair-material" }
uselesskey-core-factory = { path = "../crates/uselesskey-core-factory" }
uselesskey-core-hash = { path = "../crates/uselesskey-core-hash" }
uselesskey-core-id = { path = "../crates/uselesskey-core-id" }
uselesskey-core-negative-pem = { path = "../crates/uselesskey-core-negative-pem" }
uselesskey-core-x509-negative = { path = "../crates/uselesskey-core-x509-negative" }
uselesskey-core-x509-spec = { path = "../crates/uselesskey-core-x509-spec" }
uselesskey-core-token-shape = { path = "../crates/uselesskey-core-token-shape" }
uselesskey-core-jwk-shape = { path = "../crates/uselesskey-core-jwk-shape" }
uselesskey-ecdsa = { path = "../crates/uselesskey-ecdsa" }
uselesskey-ed25519 = { path = "../crates/uselesskey-ed25519" }
uselesskey-hmac = { path = "../crates/uselesskey-hmac" }
uselesskey-x509 = { path = "../crates/uselesskey-x509" }
uselesskey-jsonwebtoken = { path = "../crates/uselesskey-jsonwebtoken", features = ["ecdsa", "ed25519", "hmac"] }
uselesskey-ring = { path = "../crates/uselesskey-ring", features = ["ecdsa", "ed25519"] }
uselesskey-rustls = { path = "../crates/uselesskey-rustls", features = ["x509", "ecdsa", "ed25519"] }
rustls-pki-types = "1"
ring = "0.17"
rsa = { version = "0.9", features = ["pem"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
serde_json = "1"

[[bin]]
name = "pem_corrupt"
path = "fuzz_targets/pem_corrupt.rs"
test = false
doc = false

[[bin]]
name = "core_negative_pem"
path = "fuzz_targets/core_negative_pem.rs"
test = false
doc = false

[[bin]]
name = "der_ops"
path = "fuzz_targets/der_ops.rs"
test = false
doc = false

[[bin]]
name = "rsa_pkcs8_pem_parse"
path = "fuzz_targets/rsa_pkcs8_pem_parse.rs"
test = false
doc = false

[[bin]]
name = "ecdsa_pkcs8_pem_parse"
path = "fuzz_targets/ecdsa_pkcs8_pem_parse.rs"
test = false
doc = false

[[bin]]
name = "token_format"
path = "fuzz_targets/token_format.rs"
test = false
doc = false

[[bin]]
name = "seed_parse"
path = "fuzz_targets/seed_parse.rs"
test = false
doc = false

[[bin]]
name = "core_keypair_material"
path = "fuzz_targets/core_keypair_material.rs"
test = false
doc = false

[[bin]]
name = "core_factory_cache"
path = "fuzz_targets/core_factory_cache.rs"
test = false
doc = false

[[bin]]
name = "core_hash"
path = "fuzz_targets/core_hash.rs"
test = false
doc = false

[[bin]]
name = "core_x509_negative"
path = "fuzz_targets/core_x509_negative.rs"
test = false
doc = false

[[bin]]
name = "core_token_shape"
path = "fuzz_targets/core_token_shape.rs"
test = false
doc = false

[[bin]]
name = "jwk_builder"
path = "fuzz_targets/jwk_builder.rs"
test = false
doc = false

[[bin]]
name = "jwk_order"
path = "fuzz_targets/jwk_order.rs"
test = false
doc = false

[[bin]]
name = "jwk_shape"
path = "fuzz_targets/jwk_shape.rs"
test = false
doc = false

[[bin]]
name = "negative_pem_roundtrip"
path = "fuzz_targets/negative_pem_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "jwk_serde"
path = "fuzz_targets/jwk_serde.rs"
test = false
doc = false

[[bin]]
name = "x509_negative"
path = "fuzz_targets/x509_negative.rs"
test = false
doc = false

[[bin]]
name = "token_shape"
path = "fuzz_targets/token_shape.rs"
test = false
doc = false

[[bin]]
name = "keypair_material"
path = "fuzz_targets/keypair_material.rs"
test = false
doc = false

[[bin]]
name = "seed_derivation"
path = "fuzz_targets/seed_derivation.rs"
test = false
doc = false

[[bin]]
name = "jwks_builder"
path = "fuzz_targets/jwks_builder.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ecdsa_keygen"
path = "fuzz_targets/fuzz_ecdsa_keygen.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ed25519_keygen"
path = "fuzz_targets/fuzz_ed25519_keygen.rs"
test = false
doc = false

[[bin]]
name = "fuzz_hmac_keygen"
path = "fuzz_targets/fuzz_hmac_keygen.rs"
test = false
doc = false

[[bin]]
name = "fuzz_x509_cert"
path = "fuzz_targets/fuzz_x509_cert.rs"
test = false
doc = false

[[bin]]
name = "fuzz_negative_fixtures"
path = "fuzz_targets/fuzz_negative_fixtures.rs"
test = false
doc = false

[[bin]]
name = "fuzz_derivation_stability"
path = "fuzz_targets/fuzz_derivation_stability.rs"
test = false
doc = false

[[bin]]
name = "fuzz_token_generation"
path = "fuzz_targets/fuzz_token_generation.rs"
test = false
doc = false

[[bin]]
name = "adapter_jsonwebtoken_roundtrip"
path = "fuzz_targets/adapter_jsonwebtoken_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "adapter_ring_roundtrip"
path = "fuzz_targets/adapter_ring_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "adapter_rustls_roundtrip"
path = "fuzz_targets/adapter_rustls_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "x509_chain_build"
path = "fuzz_targets/x509_chain_build.rs"
test = false
doc = false

[[bin]]
name = "factory_concurrent_access"
path = "fuzz_targets/factory_concurrent_access.rs"
test = false
doc = false

[[bin]]
name = "jwks_builder_ordering"
path = "fuzz_targets/jwks_builder_ordering.rs"
test = false
doc = false
