[package]
name = "uselesskey-integration-tests"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Core
uselesskey-core = { path = "../crates/uselesskey-core", version = "0.2.0" }

# Key types (all optional features)
uselesskey-rsa = { path = "../crates/uselesskey-rsa", version = "0.2.0", optional = true, features = ["jwk"] }
uselesskey-ecdsa = { path = "../crates/uselesskey-ecdsa", version = "0.2.0", optional = true, features = ["jwk"] }
uselesskey-ed25519 = { path = "../crates/uselesskey-ed25519", version = "0.2.0", optional = true, features = ["jwk"] }
uselesskey-hmac = { path = "../crates/uselesskey-hmac", version = "0.2.0", optional = true }
uselesskey-x509 = { path = "../crates/uselesskey-x509", version = "0.2.0", optional = true }

# JWK/JWKS
uselesskey-jwk = { path = "../crates/uselesskey-jwk", version = "0.2.0", optional = true }

# Adapters
uselesskey-jsonwebtoken = { path = "../crates/uselesskey-jsonwebtoken", version = "0.2.0", optional = true, features = ["all"] }
uselesskey-rustls = { path = "../crates/uselesskey-rustls", version = "0.2.0", optional = true, features = ["server-config", "client-config"] }
uselesskey-ring = { path = "../crates/uselesskey-ring", version = "0.2.0", optional = true }
uselesskey-aws-lc-rs = { path = "../crates/uselesskey-aws-lc-rs", version = "0.2.0", optional = true }

# External dependencies
jsonwebtoken = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true

[features]
# JWT integration tests
jwt = [
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
    "dep:uselesskey-hmac",
    "dep:uselesskey-jwk",
    "dep:uselesskey-jsonwebtoken",
    "dep:jsonwebtoken",
]

# TLS integration tests
tls = [
    "dep:uselesskey-x509",
    "dep:uselesskey-rustls",
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
    "dep:rustls",
]

# Cross-crypto backend tests
crypto-backend = [
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
    "dep:uselesskey-ring",
    "dep:uselesskey-aws-lc-rs",
    "ring",
]

# End-to-end workflow tests
e2e = [
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
    "dep:uselesskey-hmac",
    "dep:uselesskey-x509",
    "dep:uselesskey-jwk",
    "dep:uselesskey-jsonwebtoken",
    "dep:uselesskey-rustls",
]

# All integration tests
all = ["jwt", "tls", "crypto-backend", "e2e"]

[[test]]
name = "jwt_integration"
path = "jwt_integration.rs"
required-features = ["jwt"]

[[test]]
name = "tls_integration"
path = "tls_integration.rs"
required-features = ["tls"]

[[test]]
name = "crypto_backend_integration"
path = "crypto_backend_integration.rs"
required-features = ["crypto-backend"]

[[test]]
name = "e2e_workflows"
path = "e2e_workflows.rs"
required-features = ["e2e"]
